--- a/HabitTracker/HabitTracker/src/HabitTracker/HabitTracker.csproj
+++ b/HabitTracker/HabitTracker/src/HabitTracker/HabitTracker.csproj
@@ -12,6 +12,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.203.11" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.304.1" />
+    <PackageReference Include="LettuceEncrypt" Version="1.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 </Project>
