--- a/HabitTracker/HabitTracker/src/HabitTracker/HabitTracker.csproj
+++ b/HabitTracker/HabitTracker/src/HabitTracker/HabitTracker.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -11,7 +11,7 @@
     <PublishReadyToRun>true</PublishReadyToRun>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.203.11" />
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.300.12" />
     <PackageReference Include="AWSSDK.S3" Version="3.7.304.1" />
     <PackageReference Include="LettuceEncrypt" Version="1.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
